--- a/index.html
+++ b/index.html
@@ -1,25 +1,52 @@
-Privacy Policy
-Effective Date: November 17, 2024
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            padding: 20px;
+            background-color: #f9f9f9;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        p {
+            margin: 10px 0;
+        }
+    </style>
+</head>
+<body>
 
-Introduction
-This Privacy Policy explains how your information is collected, used, and disclosed when you use the application ("the App"). The App is a personal, non-commercial project developed by Shakebuddin Mohammed for educational and experimental purposes. It does not collect or use any personal data.
+    <h1>Privacy Policy</h1>
+    <p><strong>Effective Date:</strong> November 17, 2024</p>
 
-Information We Collect
-The App does not collect, store, or process any personal data from its users. Uploaded images are temporarily processed locally for functionality but are not saved, shared, or transmitted to any server.
+    <h2>Introduction</h2>
+    <p>This Privacy Policy explains how your information is collected, used, and disclosed when you use the application ("the App"). The App is a personal, non-commercial project developed by Shakebuddin Mohammed for educational and experimental purposes. It does not collect or use any personal data.</p>
 
-Use of Pinterest API
-The App integrates with the Pinterest API to retrieve content related to user inputs (e.g., image areas selected). This API access is governed by Pinterest's API Terms of Use. No user information is shared with Pinterest or any third parties.
+    <h2>Information We Collect</h2>
+    <p>The App does not collect, store, or process any personal data from its users. Uploaded images are temporarily processed locally for functionality but are not saved, shared, or transmitted to any server.</p>
 
-Data Security
-As no personal data is collected or stored by the App, there is no risk of data breach. The application processes images locally on your device for recommendations.
+    <h2>Use of Pinterest API</h2>
+    <p>The App integrates with the Pinterest API to retrieve content related to user inputs (e.g., image areas selected). This API access is governed by Pinterest's API Terms of Use. No user information is shared with Pinterest or any third parties.</p>
 
-Third-Party Services
-The App uses Pinterest’s API solely for retrieving and displaying relevant content. It complies with Pinterest’s API usage guidelines.
+    <h2>Data Security</h2>
+    <p>As no personal data is collected or stored by the App, there is no risk of data breach. The application processes images locally on your device for recommendations.</p>
 
-Changes to This Policy
-This Privacy Policy may be updated periodically to reflect improvements to the App or changes to its functionality. The latest version of this policy will always be available at the provided link.
+    <h2>Third-Party Services</h2>
+    <p>The App uses Pinterest’s API solely for retrieving and displaying relevant content. It complies with Pinterest’s API usage guidelines.</p>
 
-Contact
-For any questions or concerns about this Privacy Policy, please contact:
-Shakebuddin Mohammed
-Email: asasa.shakeb@gmail.com
+    <h2>Changes to This Policy</h2>
+    <p>This Privacy Policy may be updated periodically to reflect improvements to the App or changes to its functionality. The latest version of this policy will always be available at the provided link.</p>
+
+    <h2>Contact</h2>
+    <p>For any questions or concerns about this Privacy Policy, please contact:</p>
+    <p><strong>Shakebuddin Mohammed</strong><br>
+    Email: <a href="mailto:asasa.shakeb@gmail.com">asasa.shakeb@gmail.com</a></p>
+
+</body>
+</html>
